--- a/playboock.yml
+++ b/playboock.yml
@@ -7,4 +7,4 @@
   tasks:
     - name: "Check Ansible version"
       debug:
-        var: ansible_version.string
+        msg: {{ansible_version.string}}
